Mon Jul  3 18:19:05 2000  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb, smtp.rb, pop.rb, http.rb: 1.1.26.

	* lib/net/protocol.rb (finish): do nothing unless active.

	* lib/net/http.rb: HTTP#{get,post}2 again (for new impl).

Sun Jul  2 03:37:02 2000  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb, smtp.rb, pop.rb, http.rb: 1.1.25.

	* lib/net/protocol.rb (each_crlf_line): beg = 0 is needed in adding{}

	* lib/net/smtp.rb: allow String for to_addr of SMTP#sendmail

Sat Jul  1 03:25:56 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (call_args): command_call can be the last argument of
	  call_args.  It had to be the only argument.

	* re.c (rb_reg_s_quote): should not dump core even for unsane mbc
	  string.

Thu Jun 29 18:57:05 2000  Koga Youichirou <y-koga@mms.mt.nec.co.jp>

	* ruby.c (proc_options): mktemp() vulnerability removed.

Wed Jun 28 14:52:28 2000  Koga Youichirou <y-koga@mms.mt.nec.co.jp>

	* config.sub: NetBSD/hpcmips support.

Wed Jun 28 09:30:09 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* cygwin/GNUmakefile: add $(LIBS).

Tue Jun 27 22:38:15 2000  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb, smtp.rb, pop.rb, http.rb: 1.1.24.

	* lib/net/protocol.rb: modified each_crlf_line again.

	* lib/net/protocol.rb: do_write_beg,do_write_end -> writing{}
	  do_write_do -> do_write

	* lib/net/http.rb: can make proxy connection by passing
	  addresses to HTTP.new, start.

	* lib/net/http.rb: HTTP.new_implementation, old_implementation:
	  can use 1.2 implementation of head, get, post, put.
	  (see document)

Tue Jun 27 12:05:10 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* win32.c (myfdclr): new function.

	* win32.h: add FD_CLR.

Mon Jun 26 22:20:03 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* win32/win32.c (is_socket, extract_file_fd): New function.

	* win32/win32.c (myfdopen): use is_socket().

	* win32/win32.c (myselect): return non socket files immediately