@@ -1,3 +1,14 @@
+Fri Jul  7 03:30:00 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* numeric.c (fix_aref): convert index by NUM2INT, not FIX2INT. 
+	  (ruby-bugs:#PR37)
+
+Mon Jul  3 23:46:56 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>
+
+	* win32/win32.c (myselect, myaccept): disable interrupt while
+	  executing accept() or select() to avoid Ctrl-C causes
+	  "unknown software exception (0xc0000029)".
+
 Mon Jul  3 18:19:05 2000  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>
 
 	* lib/net/protocol.rb, smtp.rb, pop.rb, http.rb: 1.1.26.
